<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">

        <SwitchPreferenceCompat
            app:key="dark_theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="medium"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="text_size"
            app:title="@string/text_size_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/lang_header">

        <ListPreference
            app:defaultValue="eng"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="lang"
            app:title="@string/lang_action_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_header">

        <Preference
            app:key="delete_all"
            app:title="@string/delete_all_title" />

    </PreferenceCategory>

</PreferenceScreen>