<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="false"
    android:isScrollContainer="false"
    tools:context=".ui.fragments.TabataEditFragment">

    <EditText
        android:id="@+id/tabata_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_title_text_margin"
        android:background="@color/blue_grey_900"
        android:hint="@string/tabata_title_hint"
        android:inputType="text"
        android:maxLength="20"
        android:textAlignment="center"
        android:textColor="@color/red_900"
        android:textSize="@dimen/edit_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="30dp" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_table_margin"
        android:background="@color/black"
        android:focusableInTouchMode="false"

        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabata_title"
        app:layout_constraintVertical_bias="0.13999999">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/warm_up"
                android:textColor="@color/red_900" />

            <EditText
                android:id="@+id/warm_up_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="01"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text=":" />

            <EditText
                android:id="@+id/warm_up_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="30"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/work"
                android:textColor="@color/red_900" />

            <EditText
                android:id="@+id/work_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="00"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text=":" />

            <EditText
                android:id="@+id/work_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="20"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/rest"
                android:textColor="@color/red_900" />

            <EditText
                android:id="@+id/rest_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="00"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text=":" />

            <EditText
                android:id="@+id/rest_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="10"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/repeats"
                android:textColor="@color/red_900" />

            <EditText
                android:id="@+id/repeats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="1"
                android:text="4"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/cycles"
                android:textColor="@color/red_900" />

            <EditText
                android:id="@+id/cycles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="2"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/cooldown"
                android:textColor="@color/red_900" />

            <EditText
                android:id="@+id/cooldown_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="00"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text=":" />

            <EditText
                android:id="@+id/cooldown_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/blue_grey_900"
                android:inputType="number"
                android:maxLength="2"
                android:text="10"
                android:textAlignment="center"
                android:textColor="@color/red_900"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/row_margin_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/blue_grey_900"
                android:gravity="center|start"
                android:text="@string/tabata_color"
                android:textColor="@color/red_900" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/blue_grey_900"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_color"
                    android:layout_width="@dimen/color_picker_button_width"
                    android:layout_height="@dimen/color_picker_button_height"
                    android:background="@color/green_700"
                    android:shadowRadius="50" />
            </LinearLayout>

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:id="@+id/button_save_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table"
        app:layout_constraintVertical_bias="0.69">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_900"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>