<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/hintColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/tabataItemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:scaleType="fitXY"
        app:cardBackgroundColor="@color/black"

        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey_900"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/textContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:gravity="center"
                            android:text="Tabata classic"
                            android:textColor="@color/red_900"
                            android:textSize="32sp" />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/work_short"
                                    android:textColor="@color/red_900" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/rest"
                                    android:textColor="@color/red_900" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/repeats_short"
                                    android:textColor="@color/red_900" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/cycles"
                                    android:textColor="@color/red_900" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/work"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="00:00"
                                    android:textColor="@color/red_900" />

                                <TextView
                                    android:id="@+id/rest"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="00:00"
                                    android:textColor="@color/red_900" />

                                <TextView
                                    android:id="@+id/reps"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="0"
                                    android:textColor="@color/red_900" />

                                <TextView
                                    android:id="@+id/cycles"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="0"
                                    android:textColor="@color/red_900" />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>

                    <View
                        android:id="@+id/itemColor"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/red_900" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/playButton"
                        style="@style/Widget.AppCompat.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="40dp"
                        android:layout_weight="0.6"
                        android:background="@android:color/transparent"
                        android:contentDescription=""
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_play" />

                    <ImageButton
                        android:id="@+id/deleteButton"
                        style="@style/Widget.AppCompat.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="bottom|center"
                        android:layout_weight="0.4"
                        android:background="@android:color/transparent"
                        android:contentDescription=""
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_delete" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>